# rhythmslicer

./: .gitignore  LICENSE  PRE_RELEASE_TODO.md  README.md  THIRD_PARTY_NOTICES.md  noxfile.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
.rhythm-slicer/: playlist.db
docs/: Interface_checklist.md  Playback Semantics.md  ProjectSummary.md  Roadmap.md  TUI_TUNING.md  UI_INTERACTIONS.md  UI_LAYOUT.md  playlist_add_scan_policy.md  tui_refactor_plan.md
src/rhythm_slicer/: __init__.py  app.tcss  cli.py  config.py  hackscript.py  hangwatch.py  logging_setup.py  metadata.py  player_vlc.py  playlist.py  playlist_builder.py  playlist_io.py  playlist_store_sqlite.py  tui.py
tests/: conftest.py  test_ansi_sanitizer.py  test_cli.py  test_config.py  test_drive_prompt_ui.py  test_file_browser_widget.py  test_frame_player.py  test_hackscope_renderers.py  test_hackscript_extra.py  test_hackscript_host.py  test_hangwatch.py  test_help_modal.py  test_help_modal_extra.py  test_logging_setup.py  test_marquee.py  test_matrix_viz.py  test_metadata.py  test_play_order_ui.py  test_player_playlist_lazy_meta.py  test_player_vlc.py  test_playlist.py  test_playlist_builder.py  test_playlist_builder_ui.py  test_playlist_file_picker.py  test_playlist_io.py  test_playlist_save_picker.py  test_playlist_store_sqlite.py  test_playlist_table_manager.py  test_prompt_codec.py  test_status_controller.py  test_status_panel.py  test_text_helpers.py  test_tui.py  test_tui_formatters.py  test_tui_widgets.py  test_ui_bindings.py  test_virtual_playlist_list.py  test_visualizations_hackscope.py  test_visualizations_loader.py  test_visualizer_rendering.py  (+1 more)
(+32 files in other folders)
